crates/rpdf-parser/tests/regression/snapshots/lib__regression__b1_broken_missing_trailer.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 152
expression: parse_to_snapshot(& bytes)
---
error: MissingEof
