crates/rpdf-parser/tests/regression/snapshots/lib__regression__b2_broken_bad_xref_offset.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 153
expression: parse_to_snapshot(& bytes)
---
error: "XrefOffsetOutOfBounds { offset: 99999999, file_size: 105781 }"
