crates/rpdf-parser/tests/regression/snapshots/lib__regression__m1_multilang_french.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 144
expression: parse_to_snapshot(& bytes)
---
doc:
  page_count: 1
  metadata:
    producer: pdfTeX-1.40.21
  pages:
    - index: 0
      media_box:
        - 0
        - 0
        - 595.276
        - 841.89
      rotation: 0
      op_count: 7
