crates/rpdf-parser/tests/regression/snapshots/lib__regression__m2_multilang_german.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 145
expression: parse_to_snapshot(& bytes)
---
doc:
  page_count: 1
  pages:
    - index: 0
      media_box:
        - 0
        - 0
        - 200
        - 50
      rotation: 0
      op_count: 5
