crates/rpdf-parser/tests/regression/snapshots/lib__regression__m4_multilang_korean.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 147
expression: parse_to_snapshot(& bytes)
---
doc:
  page_count: 1
  metadata:
    title: "��խmŴ\u0000 �L¤Ҹ\u0000 �8�\u001c"
    author: ���M�8��
    producer: "��\u0000r\u0000p\u0000d\u0000f\u0000 �L¤Ҹ\u0000 �ĭl"
  pages:
    - index: 0
      media_box:
        - 0
        - 0
        - 595.28
        - 841.89
      rotation: 0
      op_count: 0
