crates/rpdf-parser/tests/regression/snapshots/lib__regression__s3_xref_stream_form_two_pages.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 134
expression: parse_to_snapshot(& bytes)
---
doc:
  page_count: 2
  metadata:
    producer: Adobe Acrobat 25.1.21223
  pages:
    - index: 0
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 7
    - index: 1
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 7
