crates/rpdf-parser/tests/regression/snapshots/lib__regression__s4_xref_stream_zapfdingbats.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 135
expression: parse_to_snapshot(& bytes)
---
doc:
  page_count: 2
  metadata:
    title: A XEP Example
    author: XEP R&D Team
    producer: PDFlib 3.02 (JDK 1.2/Linux 2.2.16-3)
  pages:
    - index: 0
      media_box:
        - 0
        - 0
        - 576
        - 792
      rotation: 0
      op_count: 1850
    - index: 1
      media_box:
        - 0
        - 0
        - 576
        - 792
      rotation: 0
      op_count: 778
